// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/BaseLayout should render 1`] = `
<GetContext
  title={[Function]}
>
  <Connect(UnconnectedApp)>
    <BaseLayout__Wrapper>
      <Connect(UnconnectedHeader)
        questionnaire={
          Object {
            "id": "1",
            "title": "Questionnaire",
          }
        }
      />
      <Connect(UnconnectedOfflineBanner) />
      <BaseLayout__Main>
        Children
      </BaseLayout__Main>
      <Portal
        containerInfo={<div />}
      >
        <Connect(ToastArea) />
      </Portal>
    </BaseLayout__Wrapper>
  </Connect(UnconnectedApp)>
</GetContext>
`;

exports[`components/BaseLayout should render a title 1`] = `
<GetContext
  title={[Function]}
>
  <Connect(UnconnectedApp)>
    <BaseLayout__Wrapper>
      <Connect(UnconnectedHeader)
        questionnaire={
          Object {
            "id": "1",
            "title": "Questionnaire",
          }
        }
      />
      <Connect(UnconnectedOfflineBanner) />
      <BaseLayout__Main>
        <ScrollPane
          permanentScrollBar={false}
        >
          <BaseLayout__Title>
            Title
          </BaseLayout__Title>
          Children
        </ScrollPane>
      </BaseLayout__Main>
      <Portal
        containerInfo={<div />}
      >
        <Connect(ToastArea) />
      </Portal>
    </BaseLayout__Wrapper>
  </Connect(UnconnectedApp)>
</GetContext>
`;
